Refactor tileclicked